# sendguard

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  requirements.txt
agent/: list_mcp_tools.py  rehearsal.py  (+1 more)
fivetran-mcp/: .gitignore  .mcp.example.json  README.md  fivetran-open-api-definition.json  pyproject.toml  server.py  test_server.py
fivetran-mcp/open-api-definitions/: endpoint-index.json
fivetran-mcp/open-api-definitions/account/: get_account_info.json
fivetran-mcp/open-api-definitions/certificates/: approve_certificate.json
fivetran-mcp/open-api-definitions/connections/: approve_connection_certificate.json  approve_connection_fingerprint.json  connect_card.json  connection_column_config.json  connection_details.json  connection_schema_config.json  connection_state.json  create_connection.json  delete_column_connection_config.json  delete_connection.json  delete_multiple_columns_connection_config.json  get_connection_certificate_details.json  get_connection_certificates_list.json  get_connection_fingerprint_details.json  get_connection_fingerprints_list.json  list_connections.json  modify_connection.json  modify_connection_column_config.json  modify_connection_database_schema_config.json  modify_connection_schema_config.json  modify_connection_state.json  modify_connection_table_config.json  pre_create_connection_schema_config.json  reload_connection_schema_config.json  resync_connection.json  resync_tables.json  revoke_connection_certificate.json  revoke_connection_fingerprint.json  run_setup_tests.json  sync_connection.json
(+140 files in other folders)
